//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

using NMF.Collections.Generic;
using NMF.Collections.ObjectModel;
using NMF.Expressions;
using NMF.Expressions.Linq;
using NMF.Models;
using NMF.Models.Collections;
using NMF.Models.Expressions;
using NMF.Models.Meta;
using NMF.Models.Repository;
using NMF.Serialization;
using NMF.Utilities;
using System;
using System.Collections;
using System.Collections.Generic;
using System.Collections.ObjectModel;
using System.Collections.Specialized;
using System.ComponentModel;
using System.Diagnostics;
using System.Linq;


namespace KinoAppCore.Entities
{
    
    
    /// <summary>
    /// The default implementation of the Benutzer class
    /// </summary>
    [XmlNamespaceAttribute("http://www.example.org/kino")]
    [XmlNamespacePrefixAttribute("kino")]
    [ModelRepresentationClassAttribute("http://www.example.org/kino#//Benutzer")]
    public abstract partial class Benutzer : ModelElement, IBenutzer, IModelElement
    {
        
        /// <summary>
        /// The backing field for the Vorname property
        /// </summary>
        [DebuggerBrowsableAttribute(DebuggerBrowsableState.Never)]
        private string _vorname;
        
        private static Lazy<ITypedElement> _vornameAttribute = new Lazy<ITypedElement>(RetrieveVornameAttribute);
        
        /// <summary>
        /// The backing field for the Email property
        /// </summary>
        [DebuggerBrowsableAttribute(DebuggerBrowsableState.Never)]
        private string _email;
        
        private static Lazy<ITypedElement> _emailAttribute = new Lazy<ITypedElement>(RetrieveEmailAttribute);
        
        /// <summary>
        /// The backing field for the Passwort property
        /// </summary>
        [DebuggerBrowsableAttribute(DebuggerBrowsableState.Never)]
        private string _passwort;
        
        private static Lazy<ITypedElement> _passwortAttribute = new Lazy<ITypedElement>(RetrievePasswortAttribute);
        
        /// <summary>
        /// The backing field for the Nachname property
        /// </summary>
        [DebuggerBrowsableAttribute(DebuggerBrowsableState.Never)]
        private string _nachname;
        
        private static Lazy<ITypedElement> _nachnameAttribute = new Lazy<ITypedElement>(RetrieveNachnameAttribute);
        
        /// <summary>
        /// The backing field for the Id property
        /// </summary>
        [DebuggerBrowsableAttribute(DebuggerBrowsableState.Never)]
        private Nullable<int> _id;
        
        private static Lazy<ITypedElement> _idAttribute = new Lazy<ITypedElement>(RetrieveIdAttribute);
        
        private static IClass _classInstance;
        
        /// <summary>
        /// The vorname property
        /// </summary>
        [DisplayNameAttribute("vorname")]
        [CategoryAttribute("Benutzer")]
        [XmlElementNameAttribute("vorname")]
        [XmlAttributeAttribute(true)]
        public string Vorname
        {
            get
            {
                return this._vorname;
            }
            set
            {
                if ((this._vorname != value))
                {
                    string old = this._vorname;
                    ValueChangedEventArgs e = new ValueChangedEventArgs(old, value);
                    this.OnVornameChanging(e);
                    this.OnPropertyChanging("Vorname", e, _vornameAttribute);
                    this._vorname = value;
                    this.OnVornameChanged(e);
                    this.OnPropertyChanged("Vorname", e, _vornameAttribute);
                }
            }
        }
        
        /// <summary>
        /// The email property
        /// </summary>
        [DisplayNameAttribute("email")]
        [CategoryAttribute("Benutzer")]
        [XmlElementNameAttribute("email")]
        [XmlAttributeAttribute(true)]
        public string Email
        {
            get
            {
                return this._email;
            }
            set
            {
                if ((this._email != value))
                {
                    string old = this._email;
                    ValueChangedEventArgs e = new ValueChangedEventArgs(old, value);
                    this.OnEmailChanging(e);
                    this.OnPropertyChanging("Email", e, _emailAttribute);
                    this._email = value;
                    this.OnEmailChanged(e);
                    this.OnPropertyChanged("Email", e, _emailAttribute);
                }
            }
        }
        
        /// <summary>
        /// The passwort property
        /// </summary>
        [DisplayNameAttribute("passwort")]
        [CategoryAttribute("Benutzer")]
        [XmlElementNameAttribute("passwort")]
        [XmlAttributeAttribute(true)]
        public string Passwort
        {
            get
            {
                return this._passwort;
            }
            set
            {
                if ((this._passwort != value))
                {
                    string old = this._passwort;
                    ValueChangedEventArgs e = new ValueChangedEventArgs(old, value);
                    this.OnPasswortChanging(e);
                    this.OnPropertyChanging("Passwort", e, _passwortAttribute);
                    this._passwort = value;
                    this.OnPasswortChanged(e);
                    this.OnPropertyChanged("Passwort", e, _passwortAttribute);
                }
            }
        }
        
        /// <summary>
        /// The nachname property
        /// </summary>
        [DisplayNameAttribute("nachname")]
        [CategoryAttribute("Benutzer")]
        [XmlElementNameAttribute("nachname")]
        [XmlAttributeAttribute(true)]
        public string Nachname
        {
            get
            {
                return this._nachname;
            }
            set
            {
                if ((this._nachname != value))
                {
                    string old = this._nachname;
                    ValueChangedEventArgs e = new ValueChangedEventArgs(old, value);
                    this.OnNachnameChanging(e);
                    this.OnPropertyChanging("Nachname", e, _nachnameAttribute);
                    this._nachname = value;
                    this.OnNachnameChanged(e);
                    this.OnPropertyChanged("Nachname", e, _nachnameAttribute);
                }
            }
        }
        
        /// <summary>
        /// The id property
        /// </summary>
        [DisplayNameAttribute("id")]
        [CategoryAttribute("Benutzer")]
        [XmlElementNameAttribute("id")]
        [XmlAttributeAttribute(true)]
        public Nullable<int> Id
        {
            get
            {
                return this._id;
            }
            set
            {
                if ((this._id != value))
                {
                    Nullable<int> old = this._id;
                    ValueChangedEventArgs e = new ValueChangedEventArgs(old, value);
                    this.OnIdChanging(e);
                    this.OnPropertyChanging("Id", e, _idAttribute);
                    this._id = value;
                    this.OnIdChanged(e);
                    this.OnPropertyChanged("Id", e, _idAttribute);
                }
            }
        }
        
        /// <summary>
        /// Gets the Class model for this type
        /// </summary>
        public new static IClass ClassInstance
        {
            get
            {
                if ((_classInstance == null))
                {
                    _classInstance = ((IClass)(MetaRepository.Instance.Resolve("http://www.example.org/kino#//Benutzer")));
                }
                return _classInstance;
            }
        }
        
        /// <summary>
        /// Gets fired when the Vorname property changed its value
        /// </summary>
        public event EventHandler<ValueChangedEventArgs> VornameChanged;
        
        /// <summary>
        /// Gets fired before the Vorname property changes its value
        /// </summary>
        public event EventHandler<ValueChangedEventArgs> VornameChanging;
        
        /// <summary>
        /// Gets fired when the Email property changed its value
        /// </summary>
        public event EventHandler<ValueChangedEventArgs> EmailChanged;
        
        /// <summary>
        /// Gets fired before the Email property changes its value
        /// </summary>
        public event EventHandler<ValueChangedEventArgs> EmailChanging;
        
        /// <summary>
        /// Gets fired when the Passwort property changed its value
        /// </summary>
        public event EventHandler<ValueChangedEventArgs> PasswortChanged;
        
        /// <summary>
        /// Gets fired before the Passwort property changes its value
        /// </summary>
        public event EventHandler<ValueChangedEventArgs> PasswortChanging;
        
        /// <summary>
        /// Gets fired when the Nachname property changed its value
        /// </summary>
        public event EventHandler<ValueChangedEventArgs> NachnameChanged;
        
        /// <summary>
        /// Gets fired before the Nachname property changes its value
        /// </summary>
        public event EventHandler<ValueChangedEventArgs> NachnameChanging;
        
        /// <summary>
        /// Gets fired when the Id property changed its value
        /// </summary>
        public event EventHandler<ValueChangedEventArgs> IdChanged;
        
        /// <summary>
        /// Gets fired before the Id property changes its value
        /// </summary>
        public event EventHandler<ValueChangedEventArgs> IdChanging;
        
        private static ITypedElement RetrieveVornameAttribute()
        {
            return ((ITypedElement)(((ModelElement)(KinoAppCore.Entities.Benutzer.ClassInstance)).Resolve("name")));
        }
        
        /// <summary>
        /// Raises the VornameChanged event
        /// </summary>
        /// <param name="eventArgs">The event data</param>
        protected virtual void OnVornameChanged(ValueChangedEventArgs eventArgs)
        {
            EventHandler<ValueChangedEventArgs> handler = this.VornameChanged;
            if ((handler != null))
            {
                handler.Invoke(this, eventArgs);
            }
        }
        
        /// <summary>
        /// Raises the VornameChanging event
        /// </summary>
        /// <param name="eventArgs">The event data</param>
        protected virtual void OnVornameChanging(ValueChangedEventArgs eventArgs)
        {
            EventHandler<ValueChangedEventArgs> handler = this.VornameChanging;
            if ((handler != null))
            {
                handler.Invoke(this, eventArgs);
            }
        }
        
        private static ITypedElement RetrieveEmailAttribute()
        {
            return ((ITypedElement)(((ModelElement)(KinoAppCore.Entities.Benutzer.ClassInstance)).Resolve("email")));
        }
        
        /// <summary>
        /// Raises the EmailChanged event
        /// </summary>
        /// <param name="eventArgs">The event data</param>
        protected virtual void OnEmailChanged(ValueChangedEventArgs eventArgs)
        {
            EventHandler<ValueChangedEventArgs> handler = this.EmailChanged;
            if ((handler != null))
            {
                handler.Invoke(this, eventArgs);
            }
        }
        
        /// <summary>
        /// Raises the EmailChanging event
        /// </summary>
        /// <param name="eventArgs">The event data</param>
        protected virtual void OnEmailChanging(ValueChangedEventArgs eventArgs)
        {
            EventHandler<ValueChangedEventArgs> handler = this.EmailChanging;
            if ((handler != null))
            {
                handler.Invoke(this, eventArgs);
            }
        }
        
        private static ITypedElement RetrievePasswortAttribute()
        {
            return ((ITypedElement)(((ModelElement)(KinoAppCore.Entities.Benutzer.ClassInstance)).Resolve("passwort")));
        }
        
        /// <summary>
        /// Raises the PasswortChanged event
        /// </summary>
        /// <param name="eventArgs">The event data</param>
        protected virtual void OnPasswortChanged(ValueChangedEventArgs eventArgs)
        {
            EventHandler<ValueChangedEventArgs> handler = this.PasswortChanged;
            if ((handler != null))
            {
                handler.Invoke(this, eventArgs);
            }
        }
        
        /// <summary>
        /// Raises the PasswortChanging event
        /// </summary>
        /// <param name="eventArgs">The event data</param>
        protected virtual void OnPasswortChanging(ValueChangedEventArgs eventArgs)
        {
            EventHandler<ValueChangedEventArgs> handler = this.PasswortChanging;
            if ((handler != null))
            {
                handler.Invoke(this, eventArgs);
            }
        }
        
        private static ITypedElement RetrieveNachnameAttribute()
        {
            return ((ITypedElement)(((ModelElement)(KinoAppCore.Entities.Benutzer.ClassInstance)).Resolve("nachname")));
        }
        
        /// <summary>
        /// Raises the NachnameChanged event
        /// </summary>
        /// <param name="eventArgs">The event data</param>
        protected virtual void OnNachnameChanged(ValueChangedEventArgs eventArgs)
        {
            EventHandler<ValueChangedEventArgs> handler = this.NachnameChanged;
            if ((handler != null))
            {
                handler.Invoke(this, eventArgs);
            }
        }
        
        /// <summary>
        /// Raises the NachnameChanging event
        /// </summary>
        /// <param name="eventArgs">The event data</param>
        protected virtual void OnNachnameChanging(ValueChangedEventArgs eventArgs)
        {
            EventHandler<ValueChangedEventArgs> handler = this.NachnameChanging;
            if ((handler != null))
            {
                handler.Invoke(this, eventArgs);
            }
        }
        
        private static ITypedElement RetrieveIdAttribute()
        {
            return ((ITypedElement)(((ModelElement)(KinoAppCore.Entities.Benutzer.ClassInstance)).Resolve("id")));
        }
        
        /// <summary>
        /// Raises the IdChanged event
        /// </summary>
        /// <param name="eventArgs">The event data</param>
        protected virtual void OnIdChanged(ValueChangedEventArgs eventArgs)
        {
            EventHandler<ValueChangedEventArgs> handler = this.IdChanged;
            if ((handler != null))
            {
                handler.Invoke(this, eventArgs);
            }
        }
        
        /// <summary>
        /// Raises the IdChanging event
        /// </summary>
        /// <param name="eventArgs">The event data</param>
        protected virtual void OnIdChanging(ValueChangedEventArgs eventArgs)
        {
            EventHandler<ValueChangedEventArgs> handler = this.IdChanging;
            if ((handler != null))
            {
                handler.Invoke(this, eventArgs);
            }
        }
        
        /// <summary>
        /// Resolves the given attribute name
        /// </summary>
        /// <returns>The attribute value or null if it could not be found</returns>
        /// <param name="attribute">The requested attribute name</param>
        /// <param name="index">The index of this attribute</param>
        protected override object GetAttributeValue(string attribute, int index)
        {
            if ((attribute == "VORNAME"))
            {
                return this.Vorname;
            }
            if ((attribute == "EMAIL"))
            {
                return this.Email;
            }
            if ((attribute == "PASSWORT"))
            {
                return this.Passwort;
            }
            if ((attribute == "NACHNAME"))
            {
                return this.Nachname;
            }
            if ((attribute == "ID"))
            {
                return this.Id;
            }
            return base.GetAttributeValue(attribute, index);
        }
        
        /// <summary>
        /// Sets a value to the given feature
        /// </summary>
        /// <param name="feature">The requested feature</param>
        /// <param name="value">The value that should be set to that feature</param>
        protected override void SetFeature(string feature, object value)
        {
            if ((feature == "VORNAME"))
            {
                this.Vorname = ((string)(value));
                return;
            }
            if ((feature == "EMAIL"))
            {
                this.Email = ((string)(value));
                return;
            }
            if ((feature == "PASSWORT"))
            {
                this.Passwort = ((string)(value));
                return;
            }
            if ((feature == "NACHNAME"))
            {
                this.Nachname = ((string)(value));
                return;
            }
            if ((feature == "ID"))
            {
                this.Id = ((int)(value));
                return;
            }
            base.SetFeature(feature, value);
        }
        
        /// <summary>
        /// Gets the property expression for the given attribute
        /// </summary>
        /// <returns>An incremental property expression</returns>
        /// <param name="attribute">The requested attribute in upper case</param>
        protected override NMF.Expressions.INotifyExpression<object> GetExpressionForAttribute(string attribute)
        {
            if ((attribute == "VORNAME"))
            {
                return new VornameProxy(this);
            }
            if ((attribute == "EMAIL"))
            {
                return new EmailProxy(this);
            }
            if ((attribute == "PASSWORT"))
            {
                return new PasswortProxy(this);
            }
            if ((attribute == "NACHNAME"))
            {
                return new NachnameProxy(this);
            }
            if ((attribute == "ID"))
            {
                return Observable.Box(new IdProxy(this));
            }
            return base.GetExpressionForAttribute(attribute);
        }
        
        /// <summary>
        /// Gets the Class for this model element
        /// </summary>
        public override IClass GetClass()
        {
            if ((_classInstance == null))
            {
                _classInstance = ((IClass)(MetaRepository.Instance.Resolve("http://www.example.org/kino#//Benutzer")));
            }
            return _classInstance;
        }
        
        /// <summary>
        /// Represents a proxy to represent an incremental access to the vorname property
        /// </summary>
        private sealed class VornameProxy : ModelPropertyChange<IBenutzer, string>
        {
            
            /// <summary>
            /// Creates a new observable property access proxy
            /// </summary>
            /// <param name="modelElement">The model instance element for which to create the property access proxy</param>
            public VornameProxy(IBenutzer modelElement) : 
                    base(modelElement, "vorname")
            {
            }
            
            /// <summary>
            /// Gets or sets the value of this expression
            /// </summary>
            public override string Value
            {
                get
                {
                    return this.ModelElement.Vorname;
                }
                set
                {
                    this.ModelElement.Vorname = value;
                }
            }
        }
        
        /// <summary>
        /// Represents a proxy to represent an incremental access to the email property
        /// </summary>
        private sealed class EmailProxy : ModelPropertyChange<IBenutzer, string>
        {
            
            /// <summary>
            /// Creates a new observable property access proxy
            /// </summary>
            /// <param name="modelElement">The model instance element for which to create the property access proxy</param>
            public EmailProxy(IBenutzer modelElement) : 
                    base(modelElement, "email")
            {
            }
            
            /// <summary>
            /// Gets or sets the value of this expression
            /// </summary>
            public override string Value
            {
                get
                {
                    return this.ModelElement.Email;
                }
                set
                {
                    this.ModelElement.Email = value;
                }
            }
        }
        
        /// <summary>
        /// Represents a proxy to represent an incremental access to the passwort property
        /// </summary>
        private sealed class PasswortProxy : ModelPropertyChange<IBenutzer, string>
        {
            
            /// <summary>
            /// Creates a new observable property access proxy
            /// </summary>
            /// <param name="modelElement">The model instance element for which to create the property access proxy</param>
            public PasswortProxy(IBenutzer modelElement) : 
                    base(modelElement, "passwort")
            {
            }
            
            /// <summary>
            /// Gets or sets the value of this expression
            /// </summary>
            public override string Value
            {
                get
                {
                    return this.ModelElement.Passwort;
                }
                set
                {
                    this.ModelElement.Passwort = value;
                }
            }
        }
        
        /// <summary>
        /// Represents a proxy to represent an incremental access to the nachname property
        /// </summary>
        private sealed class NachnameProxy : ModelPropertyChange<IBenutzer, string>
        {
            
            /// <summary>
            /// Creates a new observable property access proxy
            /// </summary>
            /// <param name="modelElement">The model instance element for which to create the property access proxy</param>
            public NachnameProxy(IBenutzer modelElement) : 
                    base(modelElement, "nachname")
            {
            }
            
            /// <summary>
            /// Gets or sets the value of this expression
            /// </summary>
            public override string Value
            {
                get
                {
                    return this.ModelElement.Nachname;
                }
                set
                {
                    this.ModelElement.Nachname = value;
                }
            }
        }
        
        /// <summary>
        /// Represents a proxy to represent an incremental access to the id property
        /// </summary>
        private sealed class IdProxy : ModelPropertyChange<IBenutzer, Nullable<int>>
        {
            
            /// <summary>
            /// Creates a new observable property access proxy
            /// </summary>
            /// <param name="modelElement">The model instance element for which to create the property access proxy</param>
            public IdProxy(IBenutzer modelElement) : 
                    base(modelElement, "id")
            {
            }
            
            /// <summary>
            /// Gets or sets the value of this expression
            /// </summary>
            public override Nullable<int> Value
            {
                get
                {
                    return this.ModelElement.Id;
                }
                set
                {
                    this.ModelElement.Id = value;
                }
            }
        }
    }
}
