@startuml
'https://plantuml.com/class-diagram

Film "1" <-- "0..m" Vorstellung
Kinosaal "1" <-- "0..m" Vorstellung
Vorstellung "1" <-- "0..m" Ticket
Sitzreihe "1" *-- "1..m" Sitzplatz
Kinosaal *-- "1..m" Sitzreihe
Sitzplatz "1" <-- Ticket
Benutzer "1" <-- "0..m" Ticket



class Film {
id: String
titel: String
beschreibung: String
dauer: Int
fsk: Int
genre: String
imageURL: String
}

class Kinosaal {
id: int
name: String
}

class Vorstellung {
id: int
beginn: DateTime
status: Vorstellungsstatus
}

class Sitzreihe{
id: int
kategorie: Platzkategorie
bezeichnung: String
}

class Sitzplatz{
id: int
gebucht: Boolean
nummer: Int
preis: Decimal
}

class Ticket{
id: Int
status: Ticketstatus
}

class PreisZuKategorie{
id: Int
Kategorie: Platzkategorie
Preis: Decimal
}



enum Platzkategorie{
LOGEPLUS
LOGE
PARKETT
}

class Benutzer {
  id: int
  vorname: String
  nachname: String
  email: String
  passwort: String
  rolle: String
}




enum Ticketstatus {
RESERVIERT
BEZAHLT
STORNIERT
}

enum Vorstellungsstatus {
GEPLANT
LÄUFT
BEENDET
}


@enduml